@@ -8,7 +8,8 @@
 
     <groupId>com.conveyal</groupId>
     <artifactId>r5</artifactId>
-    <version>4.7.2-SNAPSHOT</version>
+    <!-- R5 v4.8+ targets Java 11 runtime environment -->
+    <version>4.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <licenses>
         <license>
@@ -17,28 +18,6 @@
         </license>
     </licenses>
 
-    <!-- Developer entries are provided for primary developers.
-   For other contributors, see https://github.com/conveyal/r5/graphs/contributors -->
-    <developers>
-        <developer>
-            <name>Matt Conway</name>
-            <email>mconway@conveyal.com</email>
-            <organization>Conveyal</organization>
-            <organizationUrl>http://conveyal.com/</organizationUrl>
-        </developer>
-        <developer>
-            <name>Andrew Byrd</name>
-            <email>abyrd@conveyal.com</email>
-            <organization>Conveyal</organization>
-            <organizationUrl>http://conveyal.com/</organizationUrl>
-        </developer>
-        <developer>
-            <name>Marko Burjek</name>
-            <email></email>
-            <organization>Kodanta</organization>
-        </developer>
-    </developers>
-
     <!-- Define where the source code for this project lives -->
     <scm>
         <connection>scm:git:https://github.com/conveyal/r5.git</connection>
@@ -46,9 +25,26 @@
         <url>https://github.com/conveyal/r5</url>
     </scm>
 
+    <!-- Developer entries are provided for current developers and maintainers.
+    For other past contributors, see https://github.com/conveyal/r5/graphs/contributors -->
+    <developers>
+        <developer>
+            <name>Andrew Byrd</name>
+            <email>abyrd@conveyal.com</email>
+            <organization>Conveyal</organization>
+            <organizationUrl>http://conveyal.com/</organizationUrl>
+        </developer>
+        <developer>
+            <name>Anson Stewart</name>
+            <email>astewart@conveyal.com</email>
+            <organization>Conveyal</organization>
+        </developer>
+    </developers>
+
     <!-- Define some variables to be used elsewhere in the build. -->
     <properties>
-        <geotools.version>14.0</geotools.version>
+        <geotools.version>21.2</geotools.version>
+        <jackson.version>2.6.1</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -63,7 +59,6 @@
     </distributionManagement>
 
     <build>
-
         <resources>
             <resource>
                 <!-- Filtering means Maven will substitute some variables into files in the resources directory before
@@ -79,17 +74,28 @@
                 </includes>
             </resource>
         </resources>
-
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <!-- use Java 8 -->
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <!-- For Java 11 Modules, specify a module name. Do not create module-info.java until all
+                                 our dependencies specify a module name. -->
+                            <Automatic-Module-Name>com.conveyal.r5</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
 
@@ -118,9 +124,35 @@
             </plugin>
 
             <plugin>
+                <!-- Plugin for running unit tests -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <!-- we have to fork the JVM during tests so that the argLine is passed along -->
+                    <forkCount>2</forkCount>
+                    <!-- enable the restricted reflection under Java 11 so that the ObjectDiffer works -->
+                    <argLine>
+                        -Xmx2G
+                        -Dfile.encoding=UTF-8
+                        --illegal-access=permit
+                        --add-opens java.base/java.lang.module=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.util=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.module=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.2</version>
+                <version>3.2.1</version>
                 <!-- Create a version of the JAR that includes all dependencies.
                      We don't want this to be attached and deployed, but we'll have Travis upload it to S3. -->
                 <executions>
@@ -189,10 +221,10 @@
                 <!-- Allow attaching Javadoc during releases -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.1.1</version>
                 <configuration>
                     <!-- Turn off Java 8 strict Javadoc checking -->
-                    <additionalparam>-Xdoclint:none</additionalparam>
+                    <doclint>none</doclint>
                     <tags>
                         <tag>
                             <name>notnull</name>
@@ -207,7 +239,8 @@
                     </tags>
                 </configuration>
                 <executions>
-                    <!-- Compress Javadoc into JAR and include that JAR when deploying. -->
+                    <!-- Compress Javadoc into JAR and include that JAR when deploying.
+                         This is required for deployments to Maven Central. -->
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
@@ -218,9 +251,10 @@
             </plugin>
 
             <plugin>
-                <!-- Include zipped source code in releases -->
+                <!-- Include zipped source code in releases. -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -234,7 +268,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.6</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -244,6 +278,12 @@
                         <goals>
                             <goal>sign</goal>
                         </goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -266,23 +306,25 @@
             <url>https://maven.conveyal.com</url>
         </repository>
         <repository>
-            <id>conveyal-ossrh</id>
+            <id>ossrh-releases</id>
             <name>releases on sonatype, which may not yet have been synced with central</name>
             <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>ossrh-snapshots</id>
+            <name>releases on sonatype, which may not yet have been synced with central</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
         <repository>
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
             <url>https://download.osgeo.org/webdav/geotools/</url>
         </repository>
-        <!-- Needed  for graphql-java-->
+        <!-- For the polyline encoder -->
         <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-andimarek-graphql-java</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/andimarek/graphql-java</url>
+            <id>axiom-public-releases</id>
+            <name>Axiom Releases</name>
+            <url>http://nexus.axiomalaska.com/nexus/content/repositories/public-releases</url>
         </repository>
         <!-- axiomalaska polyline-encoder 0.1 available here -->
         <repository>
@@ -297,20 +339,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.6.1</version>
-        </dependency>
-        <!-- JTS does 2D geometry and topology. Recently moved from vividsolutions to locationtech.
-          We could update R5 to use the new locationtech class names and its built-in GeoJSON support.
-          However, Geotools still depends on vividsolution JTS so this might be complicated. -->
-        <dependency>
-            <groupId>com.vividsolutions</groupId>
-            <artifactId>jts</artifactId>
-            <version>1.13</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
-            <groupId>de.grundid.opendatalab</groupId>
-            <artifactId>geojson-jackson</artifactId>
-            <version>1.5</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.javacsv</groupId>
@@ -318,31 +352,6 @@
             <version>2.0</version>
         </dependency>
         <!-- GeoTools is a free software GIS toolkit. -->
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-opengis</artifactId>
-            <version>${geotools.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-api</artifactId>
-            <version>${geotools.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-shapefile</artifactId>
-            <version>${geotools.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-epsg-hsql</artifactId>
-            <version>${geotools.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-referencing</artifactId>
-            <version>${geotools.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-coverage</artifactId>
@@ -359,22 +368,43 @@
             <version>${geotools.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-main</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-opengis</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-referencing</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.0</version>
         </dependency>
-        <!-- Caffeine is a Java 8 rewrite of the Guava cache with asynchronous LoadingCaches. We don't currently use
-             the async capabilities, but Caffeine's LoadingCache syntax is more modern idiomatic Java than Guava's. -->
-        <dependency>
-            <groupId>com.github.ben-manes.caffeine</groupId>
-            <artifactId>caffeine</artifactId>
-            <version>2.6.2</version>
-        </dependency>
+
         <!-- Conveyal library for loading and storing GTFS transit data. -->
         <dependency>
             <groupId>com.conveyal</groupId>
             <artifactId>gtfs-lib</artifactId>
-            <version>3.0.7</version>
+            <!-- gtfs-lib maintenance v3.0.9+ updated for Java 11, but able to use existing MapDB files. -->
+            <version>3.0.11</version>
         </dependency>
         <!-- Conveyal library for loading and storing OSM road data. -->
         <dependency>
@@ -386,7 +416,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.30</version>
         </dependency>
         <!-- Logging API implementation. -->
         <dependency>
@@ -406,12 +436,7 @@
         <dependency>
             <groupId>com.conveyal</groupId>
             <artifactId>kryo-tools</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java</artifactId>
-            <version>2016-02-19T11-51-00</version>
+            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
@@ -425,14 +450,21 @@
             </exclusions>
         </dependency>
         <dependency>
+            <!-- TODO eliminate custom Conveyal geojson library, use Geotools? -->
             <groupId>com.conveyal</groupId>
             <artifactId>jackson2-geojson</artifactId>
-            <version>0.8</version>
+            <version>0.9</version>
         </dependency>
+        <!--Maintainer has updated this polyline library to match our dependencies (newer JTS). -->
         <dependency>
             <groupId>com.axiomalaska</groupId>
             <artifactId>polyline-encoder</artifactId>
-            <version>0.1</version>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
 </project>
